--- a/css/style.css
+++ b/css/style.css
@@ -60,11 +60,11 @@ h2 code {
 }
 
 .secondary_font {
-    font-family: 'Ubuntu Mono', serif;
+    /* font-family: 'Ubuntu Mono', serif; */
 }
 
 .section-subtitle {
-    font-family: 'Ubuntu Mono', serif;
+    /* font-family: 'Ubuntu Mono', serif; */
 }
 
 #profile_picture  {
@@ -174,11 +174,14 @@ h2 code {
 }
 
 .publication .section-1 .publication-date {
-/*    font-family: 'Ubuntu Mono', serif;*/
+   font-family: 'Ubuntu Mono', serif;
 }
 
 .publication .section-1 .publication-name {
-/*    font-family: 'Ubuntu Mono', serif;*/
+   font-family: 'Ubuntu Mono', serif;
+   font-style: italic;
+
+
 }
 
 
@@ -188,6 +191,9 @@ h2 code {
     margin-bottom: .5%;
 }
 
+.publication .section-2 .author-me {
+    color: #8c1515a3!important;
+}
 
 .publication .section-3 {
     margin-top: -.5%;
@@ -197,6 +203,7 @@ h2 code {
 
 .publication .section-3 a{
     padding: .15%;
+    color: #49505775
 }
 
 .publication .section-3 a:hover {
